[package]
name = "foreplot"
description = "A CLI program to generate plots based on latitude and longitude. Data from the National Weather Service."
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.93"
chrono = "0.4.38"
clap = { version = "4.5.21", features = ["derive"] }
plotters = "0.3.7"
ureq = { version = "2.10.1", features = ["json"] }
serde_json = "1.0.133"
